--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p><select size="2" multiple name="age" required>
                     <option value="15-20">15-20</option>
                     <option value="21-27">21-27</option>
-                    <option value="28-35> 28-35</option>
+                    <option value="28-35">28-35</option>
                     <option value="36-40">36-40</option>
                     <option value="41-46">41-46</option>
                     <option value="47-90">47-90</option>
@@ -23,8 +23,8 @@
                 <p><input name="vanilla" type="checkbox" value="vanilla">Ванільне</p>
                 <p><input name="chocolate" type="checkbox" value="chocolate">Шоколадне</p>
                 <p><input name="fruit" type="checkbox" value="fruit">Фруктове</p>
-                <label for="other variant">Ваш варіант</label><br>
-                <input type="text" name="other variant" id="other variant">
+                <label for="othervariant">Ваш варіант</label><br>
+                <input type="text" name="othervariant" id="othervariant">
             <p><input type="submit" value="Підтвердити"></p>
         </form>
     </body>
