--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <form action="https://formspree.io/oksanavengrun@gmail.com" method="POST">
             <h1>Яке морозиво вам подобається найбільше?</h1>
             <p>Вкажіть вашу стать</p>
-                <p><input name="female" type="radio" value="female">Жінка</p>
-                <p><input name="male" type="radio" value="male"> Чоловік</p>
+                <p><input name="gender" type="radio" value="female">Жінка</p>
+                <p><input name="gender" type="radio" value="male"> Чоловік</p>
             <p>Вкажіть до якої вікової категорії ви належите</p>
                 <p><select size="2" multiple name="age" required>
                     <option value="15-20">15-20</option>
